Corrigindo bug de overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 :root{
@@ -55,7 +54,7 @@ main{
 }
 
 .main{
-    height: 90.6vh;
+    height: 89.6vh;
     width: 75%;
 }
 
@@ -115,7 +114,7 @@ main{
     background-color: #607d8b;
     display: flex;
     justify-content: center;
-    height: 90.6vh;
+    height: 89.6vh;
     width: 25%;
 }
 
